# security-cam

./: .gitmodules  CMakeLists.txt  README.md  SecurityCam.pro
.github/workflows/: codeql-analysis.yml
.reuse/: dep5
SecurityCam/: CMakeLists.txt  SecurityCam.pro  SecurityCam.rc  cfg.qtconf  frames.cpp  frames.hpp  license_dialog.cpp  license_dialog.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  options.cpp  options.hpp  options.ui  resolution.cpp  resolution.hpp  resolution.ui  resources.qrc  view.cpp  view.hpp
SecurityCam/img/: icon.svgz  icon_16x16.svgz  icon_22x22.svgz  icon_32x32.svgz  icon_48x48.svgz
src/: CMakeLists.txt  SecurityCam.rc  cfg.qtconf  frames.cpp  frames.hpp  license_dialog.cpp  license_dialog.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  options.cpp  options.hpp  options.ui  resolution.cpp  resolution.hpp  resolution.ui  resources.qrc  view.cpp  view.hpp
